# deploy_streamlit

./: app.py  pyproject.toml  requirements.txt
