[tool.poetry]
name = "deploy_streamlit"
version = "0.1.0"
description = ""
authors = ["João Othávio <joaoothaviofabri14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.53.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
